:construction_worker: Arreglo diseño 19 y 23

--- a/src/scss/layouts/_pag23.scss
+++ b/src/scss/layouts/_pag23.scss
@@ -47,70 +47,106 @@
                 padding: 2rem;
             }
 
-            .caja{
+            a{
+                display: block;
                 height: 20rem;
-                margin-bottom: 2rem;
-                box-shadow: 0px 1px 16px 0px rgba(0,0,0,0.41);
-    
-                .titulo{
-                    text-align: center;
-                    padding: 2rem .5rem;
-                    height: 8rem;
-                    background: v.$verde;
-                    color: v.$blanco;
-                    font-size: 1.6rem;
-                }
-    
-                .cont-imagen{
-                    width: 100%;
-                    height: 12rem;
 
-                    @include m.tablet{
-                        width: 40%;
-                        margin: 0 auto;
+                .caja{
+                    
+                    margin-bottom: 2rem;
+                    box-shadow: 0px 1px 16px 0px rgba(0,0,0,0.41);
+        
+                    .titulo{
+                        text-align: center;
+                        padding: 2rem .5rem;
+                        height: 8rem;
+                        background: v.$verde;
+                        color: v.$blanco;
+                        font-size: 1.6rem;
                     }
+        
+                    .cont-imagen{
+                        width: 100%;
+                        height: 12rem;
     
-                    &.mitad{
-                        width: 50%;
-                        margin: 0 auto;
-
-                        @include m.escritorioHD{
-                            width: 70%;       
-                        }
-
-                        @include m.escritorio{
-                            width: 50%;       
-                        }
-
                         @include m.tablet{
-                            width: 40%;       
+                            width: 30%;
+                            margin: 0 auto;
                         }
-
-                        img{
-                            padding: 2rem;
-
-                            
+    
+                        @include m.telefono{
+                            width: 45%;
+                            margin: 0 auto;
+                        }
+        
+                        &.mitad{
+                            width: 50%;
+                            margin: 0 auto;
+    
+                            @include m.escritorioHD{
+                                width: 70%;       
+                            }
+    
+                            @include m.escritorio{
+                                width: 50%;       
+                            }
+    
+                            @include m.tablet{
+                                width: 25%;       
+                            }
+    
+                            @include m.tablet{
+                                width: 45%;       
+                            }
+    
+                            img{
+                                padding: 2rem;
+    
+                                
+                            }
                         }
                     }
-                }
-    
+                }    
             }
+            
 
             .cont-info{
                 padding: 2rem;
                 background: v.$fondo6;
-                height: 45rem;
+                height: 0;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                opacity: 0;
+                transition: all .3s ease;
 
                 p{
                     text-align: center;
+                    display: none;
+                }
+
+                li{
+                    display: none;
                 }
 
                 &.visualizar{
+                    height: 45rem;
+                    opacity: 1;
 
+                    p{
+                        display: block;
+                    }
+
+                    li{
+                        display: block;
+                    }
+
+                    @include m.tablet{
+                        height: auto;
+                    }
                 }
+
+                
             }
         }
     }
@@ -120,9 +156,11 @@
 
         .filas{
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-around;
             align-items: center;
+            margin-left: 1rem;
             margin-bottom: 2rem;
+            flex-wrap: wrap;
 
             &#fila1{
                 .imagen{
@@ -164,18 +202,36 @@
                 }
             }
 
-            .imagen{
+            a{
+                display: block;
                 width: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 2rem;
-                border-radius: 2rem;
-                
-                .cont-imagen{
-                    width: 40%;
-                    height: 8rem;
-                    margin: 0;
+
+                @include m.tablet{
+                    width: 90%;
+                    margin-bottom: 2rem;
+                }
+
+                .imagen{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 2rem;
+                    border-radius: 2rem;
+                    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.35);
+                    
+                    .cont-imagen{
+                        width: 40%;
+                        height: 8rem;
+                        margin: 0;
+
+                        @include m.tablet{
+                            width: 25%;
+                        }
+
+                        @include m.telefono{
+                            width: 40%;
+                        }
+                    }
                 }
             }
 
@@ -183,6 +239,28 @@
                 width: 70%;
                 padding: 2rem;
                 border-radius: 2rem;
+                box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.35);
+                opacity: 0;
+                transition: all .3s ease;
+                
+
+                p{
+                    opacity: 0;
+                    transition: all .3s ease;
+                }
+
+                &.visualizar{
+                    opacity: 1;
+
+                    p{
+                        opacity: 1;
+                    }
+                    
+                }
+
+                @include m.tablet{
+                    width: 90%;
+                }
             }
         }
     }
