--- a/src/scss/layouts/_pag06.scss
+++ b/src/scss/layouts/_pag06.scss
@@ -119,63 +119,9 @@
                 transition: all .3s ease;
             }
 
-            .btn-pag06{
-                animation-name: parpadeo;
-                animation-duration: 2s;
-                animation-timing-function: linear;
-                animation-iteration-count: infinite;
-                -webkit-animation-name: parpadeo;
-                -webkit-animation-duration: 2s;
-                -webkit-animation-timing-function: linear;
-                -webkit-animation-iteration-count: infinite;
-
-            }
-
             .btn-pag06:hover{
-                animation-play-state: paused;
+                @include m.parpadeo;
             } 
-
-            @-moz-keyframes parpadeo {
-                0% {
-                  opacity: 1.0;
-                }
-              
-                50% {
-                  opacity: 0.0;
-                }
-              
-                100% {
-                  opacity: 1.0;
-                }
-            }
-              
-            @-webkit-keyframes parpadeo {
-                0% {
-                  opacity: 1.0;
-                }
-              
-                50% {
-                  opacity: 0.0;
-                }
-              
-                100% {
-                  opacity: 1.0;
-                }
-            }
-              
-            @keyframes parpadeo {
-                0% {
-                  opacity: 1.0;
-                }
-              
-                50% {
-                  opacity: 0.0;
-                }
-              
-                100% {
-                  opacity: 1.0;
-                }
-            }
 
             .img-libro{
                 width: 80%;
