--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -1,349 +1,21 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-.cuestionario2{
-    display: block;
-    .contenedor2{
-        display: none;
-        .contenedor1{
-            display: flex;
-            .persona1{
-                position: absolute;
-                width:14%;
-                padding-left: 10px;
-                z-index: 1;
-                top: 15.5%;
-                @include m.tablet{
-                    width: 20%;
-                    margin-top: 10%;
-                    margin-left: 1%;
-                }
-                @include m.telefono{
-                    width: 20%;
-                    margin-top: 12%;
-                    margin-left: 0.5%;
-                    float: right;
-                }
-            }
-            .cuadro-azul{
-                margin-top: 7%;
-                width: 1600px;
-                height: 35%;
-                background-color: #B9D4FF;
-                color: #fff;
-                margin-left: -30%;
-                z-index: -1;
-                .txt-azul{
-                    text-align: center;
-                    color: #fff !important;
-                    padding:40px 50px 40px 44.9%;
-                    font-size: 1.4vw;
-                    @include m.tablet{
-                        margin-top: 5px;
-                        font-size: 2.1vw;
-                    }
-                    @include m.telefono{
-                        margin-top: 5px;
-                        font-size: 2.1vw;
-                        height: 15%;
-                    }
-                }
-            }
-                
-        }
-        
-        .iniciar{
-            background-color: #E1E7ED;
-            width: 100%;
-            height: 20%;
-            min-height: 200px;
-            @include m.telefono{
-                height: 15%;
-                min-height: 120px;
-            }
-            input{
-                align-items: center;
-                height: 60px;
-                width: 160px;
-                background-color: #F9C931;
-                border: solid 2px #fff;
-                border-radius: 8px;
-                color: #fff;
-                margin-left: 40%;
-                margin-top: 8%;
-                font-size: 4vh;
-                @include m.telefono{
-                    margin-left: 35%;
-                    margin-top: 10%;
-                    height: 40px;
-                    width: 100px;
-                }
-            }
-            &:hover{
-                opacity: 0.5;
-            }
-        }
+.intro-pagina21{
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: v.$azul2;
+    position: relative;
+
+    .cont-imagen{
+        width: 20%;
+        margin: 0;
     }
-    .contenedor2.activo{
-        display: block;
+
+    .cont-mensaje{
+        width: 70%;
     }
 }
 
-.contenido21{
-    display: none;
-    .cuadro2click{
-        display: flex;
-        background-color: #D9EDEF;
-        align-items: center;
-        padding:0% 2.5%;
-        margin-top: 4%!important;
-        .icon2c{
-            padding-top: 1%;
-            width: 5%;
-            height: 5%;
-        }
-        p{
-            padding-top: 1%;
-            margin-left: 2%;
-            text-align: center;
-        }
-    }
-    .actividad21{
-        background-color:#E1E7ED;
-        padding: 2% 2% 7% 2%;
-        display: flex;
-        height: 60%;
-        .columna1{
-            width: 200%;
-            .cuadroC1{
-                display: flex;
-                width: 140%;
-                height:20%;
-                text-align: center;
-                margin-top: 2%;
-                cursor: pointer;
-                p{
-                    background-color: #f4f6f5;
-                    font-size: 0.85vw;
-                    height: 100%;
-                    width: 90%;
-                   
-                }
-                
-                .pin{
-                    align-items: center;
-                    height: 15px;
-                    width: 15px;
-                    border-radius: 15px;
-                    background-color: #0C8F5A;
-                    margin-top: 8%;
-                    margin-left: 6%;
-                }
-            } 
-
-            #respuesta1pag21{
-                p{
-                    padding: 3% 3%;
-                }
-                &:hover{
-                    @include m.parpadeo();
-                }
-            }
-            #respuesta2pag21{
-                p{
-                    padding: 3% 3%;
-                }
-                &:hover{
-                    @include m.parpadeo();
-                }
-            }
-            #respuesta3pag21{
-                p{
-                    padding: 3% 3%;
-            
-                }
-                &:hover{
-                    @include m.parpadeo();
-                }
-            }
-            #respuesta4pag21{
-                p{
-                    padding: 2.5% 3%;
-                }
-                &:hover{
-                    @include m.parpadeo();
-                }
-            }
-
-            #respuesta5pag21{
-                p{
-                    padding: 3% 3%;
-                }
-                &:hover{
-                    @include m.parpadeo();
-                }
-            }
-            
-
-            .cuadroC1#respuesta1pag21{
-                p{
-                    @include m.parpadeo();
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-            
-            .cuadroC1#respuesta1pag21.correcto{
-                p{
-                    background-color: #E96247;
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-            
-            .cuadroC1#respuesta2pag21.correcto{
-                p{
-                    background-color: #870051;
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-
-            .cuadroC1#respuesta3pag21.correcto{
-                p{
-                    background-color: #F9C931;
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-            
-            .cuadroC1#respuesta4pag21.correcto{
-                p{
-                    background-color: #7AA0DD;
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-            .cuadroC1#respuesta5pag21.correcto{
-                p{
-                    background-color: #002F87;
-                }
-                &:hover{
-                    @include m.parpadeo0();
-                }
-            }
-
-        }
-        .columna2{
-            width: 100%;
-            margin-left: 30%;
-            .cuadroC2{
-                display: flex;
-                width: 100%;
-                height: 20%;
-                margin-top: 1%;
-                padding: 2.5%;
-                text-align: center;
-                p{
-                    background-color: #0c8f5a;
-                    font-size: .9vw;
-                    height: 90%;
-                    padding: 6% 10% 8% 9%;
-                    text-align: center;
-                    width: 90%;
-                }
-                .pin{
-                    align-items: center;
-                    height: 15px;
-                    width: 15px;
-                    border-radius: 15px;
-                    background-color: #fff;
-                    margin-top: 5px;
-                    margin-right: 6%;
-                }
-            }
-            .cuadroC2#contenedor1.correcto{
-                p{
-                    background-color: #F9C931;
-                }
-            }
-            .cuadroC2#contenedor2.correcto{
-                p{
-                    background-color: #002F87;
-                }
-            }
-            .cuadroC2#contenedor3.correcto{
-                p{
-                    background-color: #E96247;
-                }
-            }
-            .cuadroC2#contenedor4.correcto{
-                p{
-                    background-color: #870051;
-                }
-            }
-            .cuadroC2#contenedor5.correcto{
-                p{
-                    background-color: #7AA0DD;
-                }
-            }
-        }
-    }
-}
-
-.contenido21.activo{
-    display: block;
-}
-
-.contenedor21final{
-    display: none;
-    height: 1200px;
-    .cuadro-amarillo21{
-        display: flex;
-        background-color: #F9C931;
-        width:100%;
-        height: 50%;
-        min-height: 350px;
-        .persona1-21{
-            position: relative;
-            z-index: 2;
-            img{
-                height: 70%;
-                width: 20%;
-                min-width: 230px;
-                margin-top: 55%;
-                margin-left: 7%;
-            }
-        }
-        .cuadro-azul21{
-            position: relative;
-            z-index: 1;
-            width:135%;
-            height: 40%;
-            background-color:  #002F87 ;
-            margin-left: -35%;
-            margin-top: 10%;
-            padding-left: 50%;
-            p{
-                width: 70%;
-                height: 60%;
-                min-height: 150px;
-                border: solid 1px #fff;
-                color: #fff;
-                margin: 5%;
-                text-align: center;
-                padding: 3.2%;
-                font-size: 1.1vw;
-            }
-        }
-    }
-}
-
-.contenedor21final.activo{
-    display: block;
-}
