--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -107,3 +107,8 @@ $vino: #AC1F03;
 
 $azulPag16: #E8F0FD;
 $amarilloPag20: #f9c931;
+
+$azulPag22: #D2DEE8;
+$amarilloPag22: #FFF2CA;
+$verdePag22: #D8FFEF;
+$azulPag22: #D1DFF6;
