--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -38,174 +38,89 @@
     }
 }
 
-.contenido1pag22{
-    background-color: #D2DEE8;
-    height: 70%;
-    min-height: 300px;
-    padding:2% 0%;
-    .contenido1_1pag22{
-        margin-top: 3%;
-        text-align: center;
-        height: 90%;
-        @include m.grid(3,1%);
-        a{  
-            margin: 2%;
-            .cuadro-amarillo22{
-                @include m.parpadeo();
-                background-color: rgb(249, 201, 49);
-                border-radius: 10px;
-                padding: 3% 3%;
-                p{
-                    color: #1A1E1E;
-                    font-weight: bold;
-                    font-size: 1vw;
-                }
-            }
-            &:hover{
-                @include m.parpadeo();
-            }
+#botonesPag22{
+    background: v.$azulPag22;
+    @include m.grid(3, 1rem);
+    position: relative;
+    // top: 5rem;
+    padding: 2rem;
 
-            .cuadro-verde22{
-                background-color: rgb(12, 143, 90);
-                border-radius: 10px;
-                padding: 3% 3%;
+    .cuadros22{
+        display: none;
+        opacity: 0;
+        transition: all .3s ease;
+    }
 
-                p{
-                    color: #fff;
-                    font-weight: bold;
-                    font-size: 1vw;
-                }
+    .btn_cuadros12:hover{
+        @include m.parpadeo;
+    } 
+
+    #btn-01{
+        position: relative;
+        #btn-colocacion{
+            padding: 2rem;
+            margin-left: 2rem;
+
+            a{
+                border-radius: 1rem;
+                @include m.botonesPag22(v.$amarilloPag20, v.$colorFuente);
             }
-            &:hover{
-                @include m.parpadeo();
-            }
-            .cuadro-azul22-2{
-                background-color: #7aa0dd;
-                border-radius: 10px;
-                padding: 3% 3%;
-                p{
-                    color: #002F87;
-                    font-weight: bold;
-                    font-size: 1vw;
-                }
-            }
-            &:hover{
-                @include m.parpadeo();
+        }
+
+        #info-colocacion{
+            display: flex;
+            @include m.infoPag22(v.$amarilloPag22);
+
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
             }
         }
     }
 
-    .contenido1_2-22{
-        height: 80%;
-        @include m.grid(3,1%);
-        .cuadro2-amarillo22{
-            display: block;
-            .minicuadro-claro{
-                display: none;
-                margin:5% 5% 0% 0%;
-                width: 90%;
-                height: 60%;
-                min-height: 400px;
-                background-color: #DDE6ED;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-            }
-            .minicuadro-amarillo{
-                display: none;
-                width: 95%;
-                height:100%;
-                background-color: #FFF2CA;
-                margin:0% 2.5%;
-                padding: 5%;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-                border: 0.1px solid #FFF;
-                .triangulo{
-                    img{
-                        margin:0% 0% 0% 49%;
-                        width: 5%;
-                        height: 6%;
-                    }
-                }
-                p{
-                    padding: 3.5% 2%;
-                    text-align: center;
-                    //font-size: 1vw;
-                }
+    #btn-02{
+        position: relative;
+        #btn-estratificacion{
+            padding: 2rem;
+            margin-left: 2rem;
+
+            a{
+                border-radius: 1rem;
+                @include m.botonesPag22(v.$verde, v.$blanco);
             }
         }
-        .cuadro2-verde22{
-            display: block;
-            .minicuadro-claro{
-                display:none;
-                margin:5% 1% 0% 1%;
-                width: 80%;
-                height: 60%;
-                min-height: 400px;
-                background-color: #DDE6ED;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-            }
-            .minicuadro-verde{
-                display: none;
-                width: 95%;
-                height: 100%;
-                background-color: #D8FFEF;
-                margin:0% 2.5%;
-                padding: 5%;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-                border: 0.1px solid #FFF;
-                .triangulo{
-                    background-color: #D8FFEF;
-                    img{
-                        margin:0% 0% 0% 49%;
-                        width: 5%;
-                        height: 30%;
-                    }
-                }
-                p{
-                    padding: 3% 2%;
-                    text-align: center;
-                    //font-size: 1vw;
-                }
+
+        #info-estratificacion{
+            display: flex;
+            @include m.infoPag22(v.$verdePag22);
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
             }
         }
-        .cuadro2-azul22{
-            display: block;
-            .minicuadro-claro{
-                display:none;
-                margin:5% 0% 0% 6%;
-                width: 90%;
-                height: 60%;
-                min-height: 400px;
-                background-color: #DDE6ED;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-                z-index: -1;
+    }
+
+    #btn-03{
+        position: relative;
+        #btn-integracion{
+            padding: 2rem;
+            margin-left: 2rem;
+
+            a{
+                border-radius: 1rem;
+                @include m.botonesPag22(v.$azul2, v.$azulRey);
             }
-            .minicuadro-azul{
-                display:none;
-                width: 95%;
-                height: 100%;
-                background-color: #D1DFF6;
-                margin:0% 2.5%;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-                padding: 5%;
-                border: 0.1px solid #FFF;
-                .triangulo{
-                    img{
-                        margin:0% 0% 0% 49%;
-                        width: 5%;
-                        height: 5%;
-                    }
-                }
-                p{
-                    padding: 3% 2%;
-                    text-align: center;
-                    //font-size: 1vw;
-                }
+        }
+
+        #info-integracion{
+            display: flex;
+            @include m.infoPag22(v.$azulPag22);
+
+            &.cuadros_activos{
+                display: block;
+                opacity: 1;
             }
         }
     }
