--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -133,8 +133,19 @@
             }
         }
 
-        .canvas{
+        .cont-canvas{
             grid-column: 3/4;
+            height: 100%;
+            position: relative;
+
+            .canvas{
+                width: 100%;
+                height: 100%;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
         }
 
         .cont-conceptos{
