--- a/src/scss/layouts/_pag21.scss
+++ b/src/scss/layouts/_pag21.scss
@@ -60,6 +60,21 @@
 
     .instrucciones-mano{
         border-radius: 0;
+
+        &.instrucciones1{
+            
+            @include m.telefono{
+                display: none;
+            }
+        }
+        
+        &.instrucciones2{
+            display: none;
+
+            @include m.telefono{
+                display: flex;
+            }
+        }
     }
 
     .actividad{
@@ -68,8 +83,13 @@
         @include m.grid(4, 1rem);
         padding: 1rem;
 
+
         .cont-enunciados{
             grid-column: 1/3;
+
+            @include m.telefono{
+                grid-column: 1/5;
+            }
 
             .filas{
                 position: relative;
@@ -83,6 +103,10 @@
                     position: relative;
                     z-index: 1;
                     transition: all .3s ease;
+
+                    @include m.telefono{
+                        cursor: default;
+                    }
     
                     &::after{
                         content: '';
@@ -104,6 +128,14 @@
                         &::after{
                             opacity: 1;
                             left: 102%;
+                        }
+
+                        @include m.telefono{
+                            border: 0;
+                            
+                            &::after{
+                                display: none;
+                            }
                         }
     
                     }
@@ -130,6 +162,34 @@
                     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
                     color: v.$blanco;
                 }
+
+                .cont-conceptos{
+                    display: none;
+
+                    .filas{
+                        
+                        div{
+                            padding: 2rem;
+                            text-align: center;
+                            color: v.$blanco;
+                            background: v.$azul1;
+                            cursor: pointer;
+
+                            &.fondoCorrecto{
+                                background: v.$verde;
+                                color: v.$blanco;
+                            }
+                        }
+                    }
+
+                    @include m.telefono{
+                        display: block;
+
+                        .filas{
+                            margin: 1rem 0;
+                        }
+                    }
+                }
             }
         }
 
@@ -146,6 +206,10 @@
                 top: 0;
                 left: 0;
             }
+
+            @include m.telefono{
+                display: none;
+            }
         }
 
         .cont-conceptos{
@@ -154,6 +218,10 @@
             justify-content: space-evenly;
             flex-direction: column;
             align-items: center;
+
+            @include m.telefono{
+                display: none;
+            }
 
             .filas{
 
@@ -189,9 +257,18 @@
                     &.seleccionado{
                         border: 1px solid v.$amarillo;
     
+                        @include m.telefono{
+                            border: none;
+                        }
+
                         &::after{
                             opacity: 1;
                             left: -10%;
+
+                            
+                            @include m.telefono{
+                                display: none;        
+                            }
                         }
                     }
                     
