--- a/src/scss/layouts/_pag18.scss
+++ b/src/scss/layouts/_pag18.scss
@@ -1,209 +1,38 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-.cuestionario{
-    display: block;
-    .contenedor2{
-        display: none;
-    }
-    .contenedor2.activo{
-        display: block;
-        .contenedor1{
-            display: flex;
-            .persona1{
-                position: absolute;
-                width:14%;
-                padding-left: 10px;
-                z-index: 1;
-                @include m.tablet{
-                    width: 20%;
-                    margin-top: 10%;
-                    margin-left: 1%;
-                }
-                @include m.telefono{
-                    width: 20%;
-                    margin-top: 12%;
-                    margin-left: 0.5%;
-                    float: right;
-                }
-            }
-            .cuadro-azul{
-                margin-top: 7%;
-                width: 1600px;
-                height: 35%;
-                background-color: #002F87;
-                color: #fff;
-                margin-left: -30%;
-                z-index: -1;
-                .txt-azul{
-                    text-align: center;
-                    color: #fff !important;
-                    padding:40px 50px 40px 44.9%;
-                    font-size: 1.4vw;
-                    @include m.tablet{
-                        margin-top: 5px;
-                        font-size: 2.1vw;
-                    }
-                    @include m.telefono{
-                        margin-top: 5px;
-                        font-size: 2.1vw;
-                        height: 15%;
-                    }
-                }
-            }
-                
-        }
-        
-        .iniciar{
-            background-color: #E1E7ED;
-            width: 100%;
-            height: 20%;
-            min-height: 200px;
-            @include m.telefono{
-                height: 15%;
-                min-height: 120px;
-            }
-            input{
-                align-items: center;
-                height: 60px;
-                width: 160px;
-                background-color: #F9C931;
-                border: solid 2px #fff;
-                border-radius: 8px;
-                color: #fff;
-                margin-left: 40%;
-                margin-top: 8%;
-                font-size: 4vh; 
-                //transition: all .4s ;
-                overflow: hidden;
-                @include m.telefono{
-                    margin-left: 35%;
-                    margin-top: 10%;
-                    height: 40px;
-                    width: 100px;
-                }
-            }
-            input:hover{
-                opacity: 0.6;
-                content: "";
-                left: 0;
-                top: 0;
-                transition: all .3s ease-in;
+#intro-cuestionario{
 
-            }
-        }
-    }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
 
-    .pregunta{
-        display:none ;
-        .niv1preg{
-            display: flex;
-            height: 12%;
-            min-height: 30px;
-            .num{
-                text-align: center;
-                align-items: center;
-                padding-top: 2.2%; 
-                width:5%;
-                background-color: #002F87;
-                color: #fff;
-                font-size: 2.2vh;
-                font-weight: bold;
-            }
-            .txt-preg{
-                padding: 1.5% 17px;
-                width: 100%;
-                background-color: #C2DCF5;
-                font-size: 1.9vh;
-                font-weight: bold;
-            }
-        }
-        
-        .cuadro-res{
-            display: block;
-            background-color: #EDEDF2;
-            height: 300px;
-            .opcion{
-                display: flex;
-                margin-left: 40%;
-                .cuadro-txt{
-                    padding-top: 10px;
-                    text-align: center;
-                    height: 50px;
-                    width: 200px;
-                    border-radius: 7px;
-                    background-color: #002F87;
-                    color: #fff;
-                    font-weight: bold;
-                    margin-top: 30px;
-                    margin-right: 10px;
-                }
-                &:hover{
-                    opacity:0.5;
-                }
-                .resultado{
-                    display:none;
-                }
-                .resultado.activo{
-                    display: block;
-                    img{
-                        height: 40px;
-                        width: 40px;
-                        margin-top: 30px;
-                    }
-                }
-            }
-        }
-    }
-    .pregunta.activo{
-        display: block;
-    }
-
-    .contenedor3pag18{
-        display:none;
+    &::after{
+        content: '';
         position: absolute;
-        background-color: #7AA0DD;
-        width: 90%;
-        max-width: 1200px;
-        height:82%;
-        z-index:3;
-        .persona1pag18{
-            img{
-                height: 41%!important;
-                margin-left: -2%;
-                margin-top: 17%;
-                padding: 0% 3%;
-                position: absolute;
-                width: 23.5%;
-                z-index: 1;
-            }
-        }
-        .cuadro-verdepag18{
-            width: 100%;
-            max-width: 1250px;
-            height: 250px;
-            background-color: #0C8F5A;
-            z-index: -1;
-            margin-left: 0%;
-            margin-top: 15%;
-            padding-top:0.01%;
-            align-items: center;
-            .cuadro-blancopag18{
-                background-color: #0C8F5A;
-                color: #fff;
-                border: solid 2px #fff;
-                font-size: 2vw;
-                height: 64%;
-                margin-left: 25%;
-                margin-top: 4.5%;
-                padding: 1% 2%;
-                width: 70%;
-                z-index: 2;
-            }
-        }
-        
+        width: 100%;
+        height: 40%;
+        bottom: 0;
+        left: 0;
+        background: v.$azulRey;
+        z-index: -1;
     }
-    .contenedor3pag18.activo{
-        display: block !important;
+
+    .cont-imagen{
+        width: 30%;
+    }
+
+    .parrafo{
+        width: 60%;
+
+        p{
+            color: v.$blanco;
+        }
+    }
+
+    .cont-boton{
+        width: 100%;
     }
 }
