--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -1,329 +1,37 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-.titulo-verde{
-    width: 100%;
-    height: 5%;
-    background-color:#0C8F5A ;
-    padding: 1% 0%;
-    text-align: center;
-    color: #fff;
+#cont-intro19{
 
-}
-
-.contenido2pag19{
-    display: flex;
-    width: 100%;
-    background-color: #FAF5E7;
-    z-index: -2;
-    height: 30%;
-    max-height: 500px;
-    padding-top: 2%;
-    font-size: 1.4rem;
-    .persona1pag19{
-        position: relative;
-        height: 90%;
-        z-index: 2;
-        padding-top: 16.5%;
-        img{
-                height: 100%;
-                width: 100%;
-                min-height: 200px;
-                max-height: 290px;
-                min-width: 200px;
-                margin-left: 10%;
-                margin-top: -6%;
-        }
-        @include m.tablet{
-            height: 70%;
-            img{
-                height: 90%;
-            }
-        }
-        @include m.telefono{
-            height: 50%;
-            img{
-                height: 40%;
-                min-height: 90px;
-                width: 100%;
-                min-width: 70px;
-            }
-        }
-    }
-    .rec1pag19{
-        height: 70%;
-        min-height: 340px;
-        width: 100%;
-        background-color: #E1E7ED;
-        z-index: 1;
-        margin-left: -12%;
-        padding: 1%;
-        margin-right: 5%;
-        font-weight: bold;
-        border-radius: 2%;
-        @include m.tablet{
-            padding: 2%;
-            height: 60%;
-        }
-        @include m.telefono{
-            height: 50%;
-            min-height: 200px;
-            margin-bottom: 10%;
-        }
-    }
-    .rec2pag19{
-        height: 70%;
-        width: 100%;
-        background-color: #F3ECD7;
-        margin-right: 5%;
-        padding: 1%;
-        max-height: 600px;
-        min-height: 340px;
-        border-radius: 2%;
-        ul{
-            li{
-                color:#E96247 ;
-                p{
-                    color: black;
-                    font-weight: bold;
-                }
-            }
-        }
-        .vinoculares{
-            width: 27%;
-            height: 3%;
-            z-index: 2;
-            margin-left: 65%;
-            margin-top: -4%;
-            float: right;
-            
-        }
-        @include m.telefono{
-            font-size: 2vw;
-            height: 50%;
-            min-height: 200px;
-        }
-    }
-    .rec3pag19{
-        position: relative;
-        height: 80%;
-        min-height: 340px;
-        width: 100%;
-        background-color: #E4E4E4;
-        z-index: 2;
-        padding: 1%;
-        font-weight: bold;
-        margin-right: -10%;
-        border-radius: 2%;
-        @include m.telefono{
-            height: 50%;
-            min-height: 200px;
-        }
-    }
-    .contenedor2pag19{
-        margin-top: 18.5%;
-        height: 100%;
-        width: 45%;
-        .persona2pag19{
-            position: relative;
-            width: 100%;
-            height: 70%;
-            z-index: 3;
-            margin-left: -5%;
-            margin-top: -7%;
-        }
-    }
-}
-
-.cuadropag19-naranja{
-    background-color:#E96247;
-    color: #fff;
-    width: 100%;
-    height: 8%;
-    margin-top: 60px;
-    padding: 2% 1% 2% 5%;
-}
-
-.contenido3pag19{
-    display: flex;
-    .contenido4pag19{
-        background-color: #E1E7ED;
-        width: 50%;
-        height: 70%;
-        .contenido8pag19{
-            width: 70%;
-            margin-left: 20%;
-            margin-top: 8%;
-            .titulopag19-azul{
-                position: relative;
-                background-color: #002F87;
-                color: #fff;
-                font-weight: bold;
-                z-index: 1;
-                text-align: center;
-                padding: 2%;
-                margin-bottom: 4%;
-            }
-            .cuadropag19-blanco{
-                position: relative;
-                background-color: #fff;
-                color: #002F87;
-                font-size: 1vw;
-                font-weight:bold ;
-                padding: 5% 20%;
-                z-index: 1;
-            }
-        }
-        .personapag19-pizarra{
-            position: relative;
-            height: 30%;
-            width: 30%;
-            z-index: 2;
-            margin-left: 5%;
-            margin-top: -7%;
-        }
-    }
-    .contenido5pag19{
-        width: 50%;
-        height: 10%;
-        max-height:250px;
-        .titulopag19-verde{
-            background-color: #0C8F5A;
-            width: 100%;
-            text-align: left;
-            padding-left: 3%;
-            padding-top: 3%;
-        }
-        .cuadro2pag19-blanco{
-            display: flex;
-            position: relative;
-            height: 40%;
-            .globo1pag19{
-                @include m.globoNegro(derecha);
-                width: 60%;
-                height: 50%;
-                margin-top: 1%;
-                margin-left: 1%;
-                font-size: 1.05vw;
-                z-index: 1;
-            }
-            .personapag19-esc{
-                z-index: 2;
-                img{
-                    height: 90%;
-                    width: 80%;
-                    margin-left: 20%;
-                    margin-top: -4%;
-                }
-            }
-        }
-    }
-    .contenido6pag19{
-        margin-top: -5%;
-        background-color: #FAF2D6;
-        height:25%;
-        min-height:251px;
-        max-height:230px;
-        padding: 3.5%;
-        .globo2pag19{
-            @include m.globoNegro(arriba);
-            height: 40%;
-            font-size: 1.3vw;
-            margin-top: 2%;
-        }
-        .globo2pag19:after{
-            left: 80% !important;
-            top:-15% !important;
-        }
-    }
-}
-
-.contenido10pag19{
-
-    margin-top: 4rem;
-
-    .titulos{
-        @include m.grid(4, 2rem);
-
-        .cuadro-naranja{
-            grid-column: 1/3;
-            padding: 2rem;
-            background: v.$naranja;
-            color: v.$blanco;
-            font-weight: 700;
-            text-align: center;
-            border-radius: 2rem;
-        }
-
-        .cuadro-amarillo{
-            grid-column: 3/4;
-            padding: 2rem;
-            background: v.$amarillo;
-            color: v.$blanco;
-            font-weight: 700;
-            text-align: center;
-            border-radius: 2rem;
-        }
-
-        .cuadro-azul{
-            grid-column: 4/5;
-            padding: 2rem;
-            background: v.$azulRey;
-            color: v.$blanco;
-            font-weight: 700;
-            text-align: center;
-            border-radius: 2rem;
-        }
-    }
-
-    .cont-cajas{
-        margin-top: 2rem;
-        @include m.grid(4, 2rem);
-
-        .cajas{
-            .cont-imagen{
-                width: 20rem;
-                height: 20rem;
-                margin: 0 auto;
-            }
-        }
-
-        .cont-parrafo{
-            padding: 2rem;
-            text-align: center;
-            height: 30rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom-left-radius: 2rem;
-            border-bottom-right-radius: 2rem;
-
-            &#parrafo1{
-                border: 1px solid v.$naranja;
-            }
-
-            &#parrafo2{
-                border: 1px solid v.$naranja;
-            }
-
-            &#parrafo3{
-                border: 1px solid v.$amarillo;
-            }
-
-            &#parrafo4{
-                border: 1px solid v.$azulRey;
-            }
-        }
-    }
-
-    .contenido13pag19{
-        margin-top: 2rem;
-        text-align: center;
+    .titulo{
         padding: 2rem;
-        font-weight: 700;
-        font-size: 1.8rem;
+        text-align: center;
         color: v.$blanco;
-        background: v.$colorFuente;
-        border-radius: 1rem;
+        background: v.$verde;
+        font-weight: 700;
+    }
+
+    .tarjetas{
+        margin-top: 2rem;
+        height: 40rem;
+        @include m.grid(3, 2rem);
+
+        .tarjeta{
+            border-radius: 1rem;
+            padding: 2rem;
+            font-weight: 500;
+
+            &#tarjeta1{
+                background: v.$fondo6;
+            }
+
+            &#tarjeta2{
+                background: v.$fondo4;
+            }
+
+            &#tarjeta3{
+                background: v.$fondo1;
+            }
+        }
     }
 }
