--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -75,6 +75,7 @@ $rojo: #FF4230;
 $rojo2: #C42626;
 $crema: #FAF3DD;
 $crema2: #FEF3D1;
+$crema3: #F8E6E2;
 $amarillo2: #FFF600;
 $dorado: #C69A0D; 
 
@@ -88,7 +89,7 @@ $fondo7: #FFFFFF;
 $fondo9: #EBD8F3;
 $grisClaro2: #D6D6D8;
 $grisFondo: #AEC1D3;
-$grisPag07: #E1E7ED;
+$grisFondo2: #F6F6F6;
 $amarilloPag07: #FEFFE0;
 $azulPag07: #DBE8FF;
 
@@ -104,6 +105,7 @@ $verdeMenta: #95DEC0;
 $lila: #D49ED8;
 $warning: #EF4A28;
 $vino: #AC1F03;
+$vino2: #C70000;
 
 $azulPag16: #E8F0FD;
 $amarilloPag20: #f9c931;
@@ -112,3 +114,9 @@ $azulPag22: #D2DEE8;
 $amarilloPag22: #FFF2CA;
 $verdePag22: #D8FFEF;
 $azulPag22: #D1DFF6;
+
+$azulPag17: #ECF5FF;
+$naranjaFuerte: #FF5E00;
+$grisFondo3: #E6E6E6;
+$crema4: #FDF5EB;
+$crema5: #FFF3CF;
