--- a/src/scss/layouts/_pag07.scss
+++ b/src/scss/layouts/_pag07.scss
@@ -49,7 +49,7 @@
 #pag07-2{
     overflow: hidden;
     position: relative;
-    background: v.$grisPag07;
+    background: v.$azulPastel;
     height: 40rem;
 
     @include m.telefono{
