--- a/src/scss/layouts/_pag16.scss
+++ b/src/scss/layouts/_pag16.scss
@@ -156,7 +156,7 @@
             display: flex;
             position: relative;
             align-items: center;
-            background: v.$grisPag07;
+            background: v.$azulPastel;
             height: 40%;
 
             @include m.tablet{
