--- a/src/scss/layouts/_pag15.scss
+++ b/src/scss/layouts/_pag15.scss
@@ -184,7 +184,7 @@
         display: block;
         width: 100%;
         height: 60rem;
-        background: v.$grisPag07;
+        background: v.$azulPastel;
 
         @include m.telefono{
             height: auto;
