--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -13,7 +13,7 @@
     @include m.telefono{
         height: 40rem;
     }
-    .personaje1{
+    .img-personaje1{
         position: relative;
         height: 100%;
         width: 10%;
@@ -30,7 +30,7 @@
         }
     }
 
-    #metodologia{
+    #text-personaje1{
         display: flex;
         position: relative;
         text-align: center;
@@ -53,391 +53,201 @@
     }
 }
 
+#cont2-pag17{
+    @include m.grid(2, 0);
 
-.nivel2{
-    max-height: 450px;
-    display: flex;
-    @include m.telefono{
-        display:block;
+    @include m.tablet{
+        @include m.grid(1, 0);
     }
-    .contenedor2{
+
+    #cont-graficaPastel{
+        background: v.$azulPastel;
         display: flex;
-        height: 450px;
-        width: 55%;
-        background-color: #E1E7ED;
+        justify-content: center;
         align-items: center;
-        .grafica-pastel{
-            .grafica-n{
-                margin-left: 25px;
-                width: 100%;
-                @include m.tablet{
-                    display: none;
-                }
-            }
-            .grafica-pq{
-                display: none;
-                @include m.tablet{
-                    display: block;
-                    width: 100%;
-                    margin-left: 15px;
-                    margin-right: 15px;
-                }
-            }
-            
-        }
-         
+
     }
 
-    .contenedor3{
-        height: 450px;
-        max-height: 450px;
-        width: 45%;
-        .buzon{
+    #cont-buzon{
+        #buzon{
             display: flex;
-            background-color:#ECF5FF;
-            max-height: 80px;
-            figure{
-                width:80px;
-                height:80px;
-                img{
-                    height: 100%;
-                    padding: 10% 0px 10% 15%;
-                    width: 100%;
-                    min-height: 60px;
-                    min-width: 60px;
-                }
-            }
-            .text-buzon{
-                @include m.tablet{
-                }
-                padding: 15px 20px;
+            height: 15rem;
+            background: v.$azulPag17;
+            padding: 2rem;
+
+            #text-buzon{
                 text-align: center;
-                align-items: center;
+                padding: 2rem;
+                @include m.resaltar(v.$colorFuente, 700);
             }
         }
 
-        .contenedor-amarillo{  
+        #personaje{
             display: flex;
-            background-color: #FAF3DD;
-            align-items: center;
-            margin: 0px;
-            max-height: 370px;
-            @include m.tablet{
-                max-height: 365px;
-            }
-            .text-amarillo{
-                width: 100%;
-                height: 70%;
-                max-height: 375px;
-                min-height: 367px;
-                padding: 20px 0px 20px 20px;
-                @include m.tablet{
-                    height: 70%;
-                    width: 80%;
-                    max-height: 365px;
-                    min-height: 365px;
-                }
-            }
-            .persona2{
-                .p2{
-                    max-width: 125px;
-                    img{
-                        height: 70%;
-                        width: 100%;
-                        margin-top: 150%;
-                        padding-right: 12%;
-                    }
-                }
-                @include m.tablet{
-                    width: 50%;
-                    img{
-                        height: 70%;
-                        width: 100%;
-                        max-height: 7%;
-                        margin-top: 120% !important;
-                        padding-right: 5%;
-                        float: right;
-                    }
-                }
-                
-            }
-        }
-        
-    }
+            background: v.$crema;
+            height: 40rem;
+            justify-content: flex-end;
 
-}
+            @include m.telefono{
+                height: 60rem;
+                display: grid;
+            }
 
-.intranet{
-    margin-top: 40px;
-    display:flex;
-    height: 20%;
-    width: 100%;
-    min-width: 960px;
-    background-color: #F8E6E2;
-    .persona-computadora{
-        width: 20%;
-        img{
-            width: 100%;
-            height: 90%;
-            min-height:50px;
-            padding: 0px 0px 0px 30px;
-            margin-top: 10%;
-        }
-    }
-    .dialogo3{
-        width: 65%;
-        @include m.tablet{
-            max-width: 350px;
-        }
-        .text-globo{
-            @include m.globoNegro(izquierda);
-            margin-top: 3.5%;
-            margin-left: 10%;
-            padding-bottom: 2%;
-            width: 95%;
-            height: 75%;
-            min-height: 30px;
-        }
-        @include m.tablet{
-            .text-globo{
-                @include m.globoNegro(izquierda);
-                border-radius: 5px !important;
-                width: 70%;
-                min-width: 350px;
-                /*@include m.telefono{
-                    width: 30%;
-                }*/
-            }
-            .text-globo::after{
-                left: -5%;
-                clip-path: polygon(100% 0, 0 50%, 100% 100%);
-            }
-        }
-    }
-}
+            #text-personaje2{
+                padding: 2rem;
+                width: 60%;
 
-@include m.telefono{
-    .contenedor2{
-        display: block;
-        padding-top: 15px;
-        height: 22% !important;
-        width: 100%;
-        min-width: 100%;
-        background-color: #E1E7ED;
-        align-items: center;
-        .grafica-pastel{
-            .grafica-n{
-                display: none;
-            }
-            .grafica-pq{
-                    display: block;
+                @include m.telefono{
                     width: 100%;
-                    margin-left: 15px;
-                    margin-right: 15px;
+                    text-align: justify;
                 }
-        }
-            
-    }
 
-    .contenedor3{
-        margin-top: 0px;
-        height: 450px;
-        width: 100%;
-        min-width:100%;
-        .buzon{
-            display: flex;
-            background-color:#ECF5FF;
-            width: 100%;
-            figure{
-                width:80px;
-                height:80px;
-                img{
-                    padding: 5px 20px 5px 25px;
-                    height: 80px;
-                    width: 80px;
+            }
+
+            .img-personaje2{
+                @include m.telefono{
+                    height: 25rem;
+                    width: 18rem;
+                    margin-left: 5rem;
                 }
             }
-            .text-buzon{
-                padding: 15px 20px;
-                text-align: center;
-                align-items: center;
-            }
-        }
-
-        .contenedor-amarillo{  
-            display: block;
-            background-color: #FAF3DD;
-            //align-items: center;
-            .text-amarillo{
-                width: 70%;
-                height: 365px;
-                padding: 20px 0px 20px 20px;
-            }
-            .persona2{
-                img{
-                    height: 300% !important;
-                    width: 20px;
-                    margin-top: 37% !important;
-                    padding-right: 20%;
-                }
-            }
-                
         }
     }
-
-    .intranet{
-        margin-top: 85%;
-        display:flex;
-        height: 40%;
-        min-height: 300px;
-        width: 100%;
-        min-width: 960px;
-        background-color: #F8E6E2;
-        .persona-computadora{
-            position: relative;
-            width: 10%;
-            img{
-                width: 90%;
-                padding: 3% 0px 0px 0px;
-                margin-top: 160%;
-                margin-left: 20%;
-                height: 40%;
-            }
-        }
-        .dialogo3{
-            position: relative;
-            width: 35%;
-            height: 20%;
-            min-width: 30px;
-            margin-left: -2%;
-            .text-globo{
-                @include m.globoNegro(abajo);
-                margin-left: -15%;
-                width: 90%;
-                min-width: 100px;
-                padding: 2%;
-                margin-top: 5%;
-                height: 5%;
-            }
-            .text-globo::after{
-                clip-path: polygon(0 0, 20% 70%, 100% 0);
-            }
-        }
-        
-    }
-        
 }
 
-.cuadroazulpag17{
+#cont3-pag17{
+    background: v.$crema3;
+    height: 20rem;
     display: flex;
-    width: 100%;
-    height: 40%;
-    background-color: #D9EDEF;
-    padding-left: 25%;
-    margin-top: 3%;
-    margin-bottom: 2%;
-    .i-click{
-        margin-top: 0.5%;
-        width: 5%;
-        height: 5%;
+
+    @include m.telefono{
+        display: grid;
+        height: 42rem
     }
-    p{
-        color: #1a1e1e;
-        text-align: center;
-        padding: 2%;
-    }
-    @include m.tablet{
-        padding-left: 10%;
-        .i-click{
-            margin-top: 1%;
-            width: 8%;
-            height: 8%;
+
+    .img-personaje3{
+        @include m.telefono{
+            height: 17rem;
+            width: 30rem
         }
-        p{
-            color: #1a1e1e;
-            text-align: center;
-            padding: 3%;
+    }
+
+    #text-personaje3{
+        @include m.globoNegro(izquierda);
+        width: 70%;
+        height: 80%;
+        margin: auto;
+
+        @include m.tablet{
+            height: 100%;
+            margin-left: 2rem;
+        }
+
+        @include m.telefono{
+            width: 100%;
+            margin: 0;
         }
     }
 }
 
-.carrusel{
-    margin-left: 20%;
-    width: 60%;
-    @include m.tablet{
-        width: 100%;
-        margin-left: 0%!important;
+#instrucciones-pag17{
+    background: v.$azulClaro1;
+    height: 10rem;
+    display: flex;
+    padding: 2rem;
+
+    @include m.telefono{
+        height: 20rem;
     }
+    
+    p{
+        margin-left: 2rem;
+
+        @include m.telefono{
+            margin-left: 0;
+            text-align: justify;
+        }
+    }
+
+    .img-clic{
+        @include m.telefono{
+            position: absolute;
+            width: 5rem;
+            height: 5rem;
+            left: 29rem;
+            margin-top: 12rem;
+
+        }
+    }
+}
+
+#cont-carrusel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50rem;
+
+    @include m.telefono{
+        height: 65rem;
+    }
+
     #carouselExampleControls{
+        width: 80rem;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         .carousel-inner{
+            width: 90%;
+            height: 90%;
+            display: flex;
+            background: v.$grisFondo2;
+
             .carousel-item{
                 .slide{
-                    width: 90%;
-                    margin-right: 5px;
                     .txt-slide{
-                        background-color: #C70000;
-                        margin-left: 11%;
-                        margin-right: 11%;
-                        margin-bottom: 0%;
-                        width: 90%;
-                        height: 20%;
-                        min-height: 40px;
-                        max-height: 90px;
-                        padding: 3% 5%;
-                        color: #fff;
+                        text-align: center;
+                        height: 10rem;
+                        width: 100%;
+                        padding: 2rem;
+                        background: v.$vino2 ;
+                        @include m.resaltar(v.$blanco,500);
+
+                        @include m.telefono{
+                            height: auto;
+                        }
                     }
-                    figure{
-                        width: 90%;
-                        margin-left: 11%;
-                        margin-right: 11%;
-                        background-color: #F6F6F6;
-                        height: 30%;
-                        min-height: 250px;
-                        max-height: 250px;
-                        align-items: center;
-                        img{
-                            margin-left: 35%;
-                            width: 40%;
-                            margin-top: 10%;
-                            @include m.tablet{
-                                margin-top: 5%;
-                                width: 38%;
-                            }
+    
+                    .img-slide{
+                        height: 30rem;
+                        width: 27rem;
+                        padding: 2rem;
+                        margin-left: 30%;
+
+                        @include m.telefono{
+                            margin-left: 5%;
+                            margin-top: 5%;
+                        }
+                    }
+
+                    .img-maletin{
+                        height: 20rem;
+                        width: 33rem;
+                        padding: 2rem;
+                        margin-left: 25%;
+                        margin-top: 5%;
+
+                        @include m.telefono{
+                            margin-left: 5%;
+                            width: 28rem;
+                            margin-top: 10rem;
                         }
                     }
                 }
             }
+
         }
-        .carousel-control-next{
-            margin-right: -5px;
-            margin-top: 0%;
-            @include m.telefono{
-                margin-top: -30%;
-            }
-            .carousel-control-next-icon{
-                position: 500px !important;
-                background-image: url("/build/img/contenido/Pag17/icono-next.svg");
-                width: 40%;
-                height: 8%;
-                @include m.tablet{
-                    height: 5%;
-                }
-            }
-        }
-        .carousel-control-prev{
-            margin-top: 0%;
-            margin-top: 0%;
-            @include m.telefono{
-                margin-top: -30%;
-            }
-            .carousel-control-prev-icon{
-                background-image: url("/build/img/contenido/Pag17/icono-prev.svg");
-                width: 40%;
-                height: 8%;
-                @include m.tablet{
-                    height: 5%;
-                }
-            }
-        }
+
     }
 }
